src/main/webapp/css/style.css
.icon-size {
    height: 50px;
    width: 50px;
}

.icon-size.active {
    opacity: 1.0;
}

.icon-size.inactive {
    opacity: 0.3;
}

.vk {
    content: url("../img/vk.png");
}
.fb {
    content: url("../img/fb.png");
}
.instagram {
    content: url("../img/instagram.png");
}
.github {
    content: url("../img/github.png");
}
.twitter {
    content: url("../img/twitter.png");
}
.google {
    content: url("../img/google.png");
}
.forsquare {
    content: url("../img/forsquare.png");
}

div.resultset {
    margin: 5px;
    border: 1px solid #ccc;
    float: left;
    width: 170px;
}

div.resultset:hover {
    border: 1px solid #777;
}

div.resultset img {
    height: auto;
}

div.resultset-description {
    padding: 5px;
    text-align: center;
}

img.resultset-social-img {
    width: 30% !important;
    padding: 5px 5px;
}

div.auth-form {
    width: 15%;
    position: inherit;
    margin: 10% auto auto;
    background-color: #F5F5F5;
}

div.username-area {
    display: block;
    width: 100%;
    padding: 0;
    margin-bottom: 20px;
    font-size: 21px;
    line-height: inherit;
    color: #333;
    border: 0;
    border-bottom: 1px solid #e5e5e5;
}
div.contact-list-profile-img-wrap {
    text-align: center;
    padding-top: 10px;
}

img.contact-list-profile-img {
    border-radius: 50%;
}

div.contact-details {
    width: 50%;
    margin: auto;
    padding-top: 50px;
    background-color: #F5F5F5;
}

